# capacitance_clamp_rtxi_module

./: .gitignore  CMakeLists.txt  Makefile  README.md  capacitance_clamp_lib.cpp  capacitance_clamp_lib.h  capacitance_clamp_rtxi_module.cpp  capacitance_clamp_rtxi_module.h
tests/: CMakeLists.txt  CapacitanceClampTest.cpp
